<resources>
    <string name="app_name">DinnerBell</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="yes_account">Already a member? Login</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="find_meals">Find Meals</string>
    <string name="my_meals">My Meals</string>
    <string name="share_meals">Share Meals</string>
    <string name="description">description</string>
    <string name="share_your_meal">Share Your Meal!</string>
    <string name="meal_name">meal name</string>
    <string name="meal_time">meal time</string>
    <string name="meeting_point">meeting point</string>
    <string name="tags" />
    <string name="mealTags">meal tags</string>
    <string name="post_meal">Post Meal!</string>
    <string name="numOfPeople">number of people</string>
    <string name="dinnerBell">DinnerBell</string>
    <string name="meal_desc">meal description</string>
    <string name="num_people">number to serve</string>
    <string name="formatTags">Tags: %1$s</string>
    <string name="formatNumPeople">Feeding: %1$s</string>
    <string name="formatTime">Ready At: %1$s</string>
    <string name="formatLocation">Location: %1$s</string>
    <string name="formatAttendees">Attendees: %1$s</string>
    <string name="channel_name">test</string>
    <string name="channel_description">test</string>
</resources>
