<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <ImageView
        android:id="@+id/sharelogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sharemeal"></ImageView>
        <TextView
            android:id="@+id/shareYourMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_your_meal"
            android:textColor="#801912"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/mealNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meal_name"
            android:inputType="textPersonName"
            android:textColor="#707070" />
        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="#707070" />

        <EditText
            android:id="@+id/timeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meal_time"
            android:inputType="time"
            android:textColor="#707070" />

        <EditText
            android:id="@+id/numOfPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numOfPeople"
            android:inputType="number"/>
        <EditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/mealTags"
            android:inputType="textMultiLine"
            android:textColor="#707070" />
        <EditText
            android:id="@+id/meetingPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meeting_point"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/postMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#707070"
            android:text="@string/post_meal"
            android:textAllCaps="false"
            android:textColor="#801912" />
    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>